Fixed whitespace issues

--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,7 @@
 ::selection {
     background: #fbc5d3;
 }
+
+body {
+    height: 100%;
+}
